--- a/app/globals.css
+++ b/app/globals.css
@@ -127,4 +127,8 @@ a:hover {
   font-size: 16px;
 }
 
+.no-underline a {
+    text-decoration: none;
+  }
+
 /* And so on for other classes based on your guidelines... */
